test/errors/scope-resolution/redefinition/function-and-record.chpl
module M {
  proc foo(x: int) { }
  record foo { }
}
