test/errors/scope-resolution/redefinition/function-and-record.1.good
function-and-record.chpl:1: In module 'M':
function-and-record.chpl:2: error: 'foo' has multiple definitions
function-and-record.chpl:3: note: redefined here
